--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate && npx prisma db push --accept-data-loss"
+    "postinstall": "prisma generate && npx prisma db push && npx prisma migrate dev"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
